# onnxruntime_vendor-release

./: 0001-Override-default-FETCHCONTENT_FULLY_DISCONNECTED-fla.patch  CHANGELOG.rst  CMakeLists.txt  README.md  debian.store  onnxruntime_vendor-extras.cmake  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
debian/: changelog  control  copyright  gbp.conf  rules
env-hooks/: onnxruntime_vendor.dsv
rpm/: ros-humble-onnxruntime-vendor.spec  ros-jazzy-onnxruntime-vendor.spec  ros-kilted-onnxruntime-vendor.spec  ros-lyrical-onnxruntime-vendor.spec  ros-rolling-onnxruntime-vendor.spec  template.spec
